# word_learning

./: .gitignore  CMakeLists.txt  CMakePresets.json  CORE_ALGORITHMS.md  CORE_PARAMETERS.md  README.md  findings.md  progress.md  task_plan.md  tasks.md
data/: README.md
docs/: README.md  course-delivery.md  debugging-guide.md  development-environment.md  installed-skills.md  project-structure.md
docs/course/: 实验报告模板.docx
docs/reports/: WordFlow实验报告(1)-原始备份.docx  WordFlow实验报告.docx  WordFlow实验报告修改版.docx  class_relationships.mmd  program_flowchart.mmd
src/: mainwindow.cpp  mainwindow.h
src/database/: databasemanager.cpp  databasemanager.h
src/dictionary/: dictionarymanager.cpp  dictionarymanager.h
src/pdf/: pdfselectableview.cpp  pdfselectableview.h
src/review/: reviewscheduler.cpp  reviewscheduler.h
